# opengl-rust

./: .gitignore  Cargo.toml  README.md  build.rs
asset/: triangle.frag  triangle.vert
assets/sea_keep_lonely_watcher/: credits.txt
assets/shaders/: triangle.frag  triangle.vert
lib/engine/: Cargo.toml
lib/engine/src/: bound.rs  buffer.rs  camera.rs  create_shader.rs  data.rs  data_uri.rs  gltf.rs  imgui.rs  layer.rs  lib.rs  main_loop.rs  model.rs  resources.rs  shader.rs  texture.rs
lib/engine/src/render/: mod.rs  render_event.rs  texture.rs
lib/engine/src/renderer/: backend.rs  frontend.rs  gl.rs  gl_render.rs  glsl.rs  mod.rs  shader.rs
lib/engine/src/scene/: mod.rs  node.rs  polymap.rs  scene.rs  test_node.rs  triple_buffer.rs
lib/engine/src/window/: event.rs  input.rs  mod.rs  scancode.rs  sdl_window.rs  window.rs
lib/engine_proc_macro/: Cargo.toml
lib/engine_proc_macro/src/: lib.rs
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
lib/gl_derive/: Cargo.toml
lib/gl_derive/src/: lib.rs
src/: main.rs  render_gl.rs  resources.rs  triangle.frag  triangle.vert
src/gl_backend/: image.rs  mod.rs  program.rs  shader.rs  utils.rs
src/render_gl/: data.rs  mod.rs
