[package]
name = "opengl"
version = "0.1.0"
authors = ["OrangeBacon <computer.backup.15@gmail.com>"]
edition = "2018"

[dependencies]
gl_derive = { path = "lib/gl_derive" }
engine = { path = "lib/engine" }
native-dialog = "0.5"
anyhow = "1.0"

[build-dependencies]
walkdir = "2"

[workspace]
members = [
    "lib/engine",
    "lib/gl",
    "lib/gl_derive",
]

[profile.dev.package."*"]
opt-level = 2

[profile.dev]
opt-level = 2
