[package]
name = "opengl"
version = "0.1.0"
authors = ["OrangeBacon <computer.backup.15@gmail.com>"]
edition = "2018"

[dependencies]
engine = { path = "lib/engine" }
native-dialog = "0.5"
anyhow = "1.0"

[build-dependencies]
walkdir = "2"

[workspace]
members = [
    "lib/engine",
    "lib/gl",t
]

[profile.dev.package."*"]
opt-level = 2

[profile.dev]
opt-level = 2
