[package]
name = "engine"
version = "0.1.0"
authors = ["OrangeBacon <computer.backup.15@gmail.com>"]
edition = "2018"

[dependencies]
gl = { path = "../gl" }

sdl2 = { version = "0.34.3", features = ["bundled", "static-link"] }
imgui = "0.6.1"
imgui-sdl2 = "0.13.0"
imgui-opengl-renderer = "0.10.0"
image = "0.23"
nalgebra-glm = "0.10"
thiserror = "1.0"
anyhow = "1.0"
