[package]
name = "engine"
version = "0.1.0"
authors = ["OrangeBacon <computer.backup.15@gmail.com>"]
edition = "2018"

[dependencies]
gl = { path = "../gl" }
gl_derive = { path = "../gl_derive" }

sdl2 = { version = "0.34.3", features = ["bundled", "static-link"] }
imgui = "0.6.1"
imgui-opengl-renderer = "0.10.0"
image = "0.23"
nalgebra-glm = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
base64 = "0.13"

slotmap = "1.0"
indexmap = { version = "1.6", features = ["serde-1"] }

thiserror = "1.0"
anyhow = "1.0"
